--- a/CSharp/VirtoCommerce.OrderExModule.Template/Data/_packages.config
+++ b/CSharp/VirtoCommerce.OrderExModule.Template/Data/_packages.config
@@ -2,16 +2,17 @@
 <packages>
   <package id="AutoCompare" version="0.3.0.53" targetFramework="net461" />
   <package id="CacheManager.Core" version="0.8.0" targetFramework="net461" />
-  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
+  <package id="EntityFramework" version="6.3.0" targetFramework="net461" />
   <package id="Hangfire.Core" version="1.6.17" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net461" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net461" />
   <package id="VirtoCommerce.CartModule.Data" version="2.17.1" targetFramework="net461" />
   <package id="VirtoCommerce.Domain" version="2.25.32" targetFramework="net461" />
   <package id="VirtoCommerce.OrderModule.Data" version="2.17.29" targetFramework="net461" />
-  <package id="VirtoCommerce.Platform.Core" version="2.13.55" targetFramework="net461" />
-  <package id="VirtoCommerce.Platform.Data" version="2.13.55" targetFramework="net461" />
+  <package id="VirtoCommerce.Platform.Core" version="2.13.56" targetFramework="net461" />
+  <package id="VirtoCommerce.Platform.Data" version="2.13.56" targetFramework="net461" />
 </packages>
