--- a/CSharp/VirtoCommerce.PriceExModule.Template/Tests/_packages.config
+++ b/CSharp/VirtoCommerce.PriceExModule.Template/Tests/_packages.config
@@ -2,17 +2,22 @@
 <packages>
   <package id="CacheManager.Core" version="0.8.0" targetFramework="net461" />
   <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
-  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
+  <package id="EntityFramework" version="6.3.0" targetFramework="net461" />
+  <package id="Hangfire.Core" version="1.6.7" targetFramework="net461" />
   <package id="Moq" version="4.12.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net461" />
   <package id="VirtoCommerce.Domain" version="2.25.32" targetFramework="net461" />
-  <package id="VirtoCommerce.Platform.Core" version="2.13.55" targetFramework="net461" />
-  <package id="VirtoCommerce.Platform.Data" version="2.13.55" targetFramework="net461" />
+  <package id="VirtoCommerce.ExportModule.Core" version="2.1.1" targetFramework="net461" /> 
+  <package id="VirtoCommerce.ExportModule.Data" version="2.1.1" targetFramework="net461" />
+  <package id="VirtoCommerce.Platform.Core" version="2.13.56" targetFramework="net461" />
+  <package id="VirtoCommerce.Platform.Data" version="2.13.56" targetFramework="net461" />
   <package id="VirtoCommerce.PricingModule.Data" version="2.18.10" targetFramework="net461" />
   <package id="xunit" version="2.4.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net461" />
