--- a/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
@@ -87,14 +87,6 @@
     <None Include="src\Web\package.json" />
     <None Include="src\Web\Readme.md" />
     <None Include="src\Web\Web.csproj" />
-    <None Include="Tests\_packages.config" />
-    <None Include="Web\Readme.md" />
-    <None Include="Web\Localizations\en.module.json" />
-    <None Include="Web\_app.config" />
-    <None Include="Web\module.ignore" />
-    <None Include="Web\module.manifest" />
-    <None Include="Web\_packages.config" />
-    <None Include="Web\Web.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Web\Module.cs" />
@@ -102,8 +94,6 @@
     <None Include="src\Data\Repositories\DbContext.cs" />
     <None Include="src\Data\Repositories\DesignTimeDbContextFactory.cs" />
     <None Include="src\Core\ModuleConstants.cs" />
-    <None Include="Web\AssemblyInfo.cs" />
-    <None Include="Tests\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,24 +122,11 @@
     <Content Include="src\Web\Scripts\resources\module-api.js" />
     <Content Include="src\Web\Web.vstemplate" />
     <Content Include="src\Web\webpack.config.js" />
-    <Content Include="Tests\Tests.csproj" />
-    <Content Include="Tests\Tests.vstemplate" />
-    <Content Include="Web\Content\css\stylesheet.css" />
-    <Content Include="Web\Content\help\arch_scheme.png" />
-    <Content Include="Web\Content\help\index.html" />
-    <Content Include="Web\Content\help\sample.png" />
-    <None Include="Web\Content\help\stylesheet.css" />
-    <Content Include="Web\Web.csproj" />
-    <Content Include="Web\Web.vstemplate" />
-    <Content Include="Web\Scripts\blades\hello-world.js" />
-    <Content Include="Web\Scripts\blades\hello-world.html" />
-    <Content Include="Web\Scripts\module.js" />
-    <Content Include="Web\Scripts\resources\module-api.js" />
+    <Content Include="test\Tests.csproj" />
+    <Content Include="test\Tests.vstemplate" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Tests\Test.cs" />
-    <None Include="Web\Controllers\Api\MyModuleController.cs" />
-    <None Include="Web\Module.cs" />
+    <None Include="test\Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\Core\Events\" />
