--- a/CSharp/VirtoCommerce.Module.Template/src/Data/Data.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/src/Data/Data.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.0.0-rc4-0180" />
   </ItemGroup>
 
