--- a/CSharp/VirtoCommerce.Module.Template/src/Core/Core.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/src/Core/Core.csproj
@@ -1,18 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <noWarn>1591</noWarn>
+        <IsPackable>True</IsPackable>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+        <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.23.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Events\" />
-    <Folder Include="Notifications\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
-
+    <ItemGroup>
+        <Folder Include="Models\" />
+        <Folder Include="Events\" />
+        <Folder Include="Notifications\" />
+        <Folder Include="Services\" />
+    </ItemGroup>
 </Project>
