--- a/CSharp/VirtoCommerce.Module.Template/src/Web/Web.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/src/Web/Web.csproj
@@ -1,17 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
+    <PropertyGroup>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <noWarn>1591</noWarn>
+        <OutputType>Library</OutputType>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <OutputType>Library</OutputType>
-  </PropertyGroup>
+    <ItemGroup>
+        <Compile Remove="dist\**" />
+        <Compile Remove="node_modules\**" />
+        <EmbeddedResource Remove="dist\**" />
+        <EmbeddedResource Remove="node_modules\**" />
+        <None Remove="dist\**" />
+        <None Remove="node_modules\**" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\$ext_safeprojectname$.Data\$ext_safeprojectname$.Data.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="module.manifest">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
+    <ItemGroup>
+        <ProjectReference Include="..\$ext_safeprojectname$.Data\$ext_safeprojectname$.Data.csproj" />
+    </ItemGroup>
 </Project>
