--- a/CSharp/VirtoCommerce.Module.Template/src/Core/Core.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/src/Core/Core.csproj
@@ -9,6 +9,11 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <!-- Project is not a test project -->
+        <SonarQubeTestProject>false</SonarQubeTestProject>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
         <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.23.0" />
