--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -19,8 +19,11 @@ jobs:
     
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
+      with:
+        vs-version: '15'
 
     - name: Build extension
       run: msbuild ./CSharp/VirtoCommerce.Module.sln /t:Rebuild    
+      
       
     - run: dir /w
