--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,16 +11,16 @@ on:
 jobs:
   build:
     # The type of runner that the job will run on
-    runs-on: windows-latest
+    runs-on: windows-2016
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@master
     
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.2
-      with:
-        vs-version: '15.1'
+#    - name: Setup MSBuild.exe
+#      uses: microsoft/setup-msbuild@v1.0.2
+#      with:
+#        vs-version: '15.1'
 
     - name: Build extension
       run: msbuild ./CSharp/VirtoCommerce.Module.sln /t:Rebuild    
