--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,10 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@master
     
-#    - name: Setup MSBuild.exe
-#      uses: microsoft/setup-msbuild@v1.0.2
-#      with:
-#        vs-version: '15.1'
+    - name: Setup MSBuild.exe
+      uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build extension
       run: msbuild ./CSharp/VirtoCommerce.Module.sln /t:Rebuild    
