--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,19 +1,15 @@
-# This is a basic workflow that is manually triggered
+# Build VirtoCommerce.Module.Installer.vsix template and upload it to workflow run artifacs
 
-name: Manual workflow
+name: Build VSIX
 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-    # The type of runner that the job will run on
+
     runs-on: windows-2016
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@master
     
@@ -23,4 +19,8 @@ jobs:
     - name: Build extension
       run: msbuild ./CSharp/VirtoCommerce.Module.sln /t:Rebuild /p:Configuration=Release
 
-    - run: dir
+    - uses: actions/upload-artifact@v2
+      with:
+        name: module-installer
+        path: ./CSharp/VirtoCommerce.Module.Installer/bin/Release/VirtoCommerce.Module.Installer.vsix
+    
